# arm_mech

./: README.md
arm_controller/: CMakeLists.txt  package.xml
arm_controller/config/: joint_state_controller.yaml  trajectory_controllers.yaml
arm_controller/include/arm_controller/: arm_interface.h
arm_controller/launch/: controller.launch
arm_controller/src/: angles_converter.cpp  arm_interface.cpp
arm_controller/srv/: AnglesConverter.srv
arm_description/: CMakeLists.txt  package.xml
arm_description/launch/: display.launch  gazebo.launch
arm_description/mesh/: forearm.STL  hand.STL  joint_elbow_X.STL  joint_elbow_Z.STL  joint_finger.STL  joint_finger_thumb.STL  joint_shoulder_X.STL  joint_shoulder_Y.STL  joint_thumb.STL  joint_wrist_X.STL  joint_wrist_Z.STL  phalanx_finger_1.STL  phalanx_finger_2.STL  phalanx_finger_3.STL  phalanx_lit_finger_1.STL  phalanx_lit_finger_2.STL  phalanx_lit_finger_3.STL  phalanx_thumb_1.STL  phalanx_thumb_2.STL  shoulder.STL  stand.STL
arm_description/rviz/: display.rviz
arm_description/urdf/: arm.urdf.xacro  macro.urdf.xacro  property.urdf.xacro
