<?xml version="1.0"?>
<package format="2">
  <name>arm_description</name>
  <version>0.0.0</version>
  <description>The arm_description package</description>

  
  <maintainer email="vitaliipepko@gmail.com">Vitalii Pepko</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>
    

  </export>
</package>
